Upgrade project to Spring Boot 4.0.0 and Java 25